--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.1",
+    "remote-redux-devtools": "^0.5.16"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
